# freally-teleprompt

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EULA.md  HANDOFF.md  LICENSE  NOTICE  README.md  THIRD-PARTY.md  deny.toml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/actions/linux-deps/: action.yml
.github/workflows/: ci.yml  linux-render-spike.yml
docs/: changelog.html  documentation.html  index.html  join.html  search-index.js  search.js  styles.css
freally-align/: Cargo.toml  README.md
freally-align/src/: align.rs  lev.rs  lib.rs  script.rs
freally-align/tests/: follow.rs
freally-speech/: Cargo.toml  README.md
freally-speech/src/: grammar.rs  lib.rs  vosk_engine.rs
freally-voice/: Cargo.toml  README.md
freally-voice/src/: capture.rs  dtw.rs  fft.rs  lib.rs  mfcc.rs  recognizer.rs  resample.rs  stream.rs  vad.rs
freally-voice/tests/: recognize.rs
scripts/: app-screenshot.mjs  build-dicts.mjs  ci-local.mjs  make-icons.py
scripts/docker/: Dockerfile  run.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: mirror.html
src-tauri/capabilities/: default.json  projector.json
src-tauri/src/: bugreport.rs  eula.rs  lanmirror.rs  main.rs  projector.rs  scripts.rs  session.rs  settings.rs  speech.rs  teleprompter.rs  tray.rs  tts.rs  voice.rs
ui/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: gallery.spec.ts  i18n-fonts.spec.ts  language-switch.spec.ts  mock-ipc.ts  phase1.spec.ts  phase2.spec.ts  phase3.spec.ts
ui/scripts/: dict-lint.mjs  i18n-lint.mjs  theme-lint.mjs
ui/src/: App.tsx  main.tsx
ui/src/api/: commands.ts  events.ts  types.ts
ui/src/components/: CaesuraEditor.tsx  Icons.tsx  ModalShell.tsx  QrSvg.tsx  TeleprompterIcons.tsx  TitleBar.tsx  Transport.tsx  styles.ts
ui/src/dict/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  ru.json  tr.json  uk.json  vi.json  zh-CN.json
ui/src/i18n/: bundle.ts  locales.ts  t.ts
ui/src/i18n/__tests__/: i18n.test.ts
ui/src/i18n/locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  hi.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  nl.ftl  pl.ftl  pt-BR.ftl  ru.ftl  tr.ftl  uk.ftl  vi.ftl  zh-CN.ftl
ui/src/lib/: caesura.ts  caesuraChips.ts  fonts.ts  speed.ts  suggest.ts  time.ts  tts.ts  useTeleprompter.ts  voice.ts
ui/src/lib/__tests__/: caesura.test.ts  phase1.test.ts  suggest.test.ts  voice.test.ts
ui/src/panels/: About.tsx  BugReport.tsx  EulaGate.tsx  Projector.tsx  ProjectorSetup.tsx  ScriptLibrary.tsx  Settings.tsx  Teleprompter.tsx  Updates.tsx
ui/src/panels/__tests__/: Settings.test.tsx
ui/src/styles/: global.css
ui/src/test/: setup.ts
