# freally-teleprompt — the Tauri v2 app crate (shell, scroll engine, settings, EULA, i18n bridge).
[package]
name = "freally-teleprompt"
description = "Freally Teleprompt — a local-first, cross-platform teleprompter (Tauri v2 shell)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Resolves the per-OS config + data directories (settings.json, crash reports).
directories = { workspace = true }
# Timestamps a crash report in local time (with its offset) and in UTC.
chrono = { workspace = true }
# The native "stopped unexpectedly" box the `--crash-notice` helper shows.
rfd = { workspace = true }
# The LAN mirror's per-session key (FT-12).
getrandom = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Track A voice commands (FT-30/FT-31): the model-free recogniser plus its cpal
# microphone backend. No model, no network — audio is matched against the user's
# own recorded templates locally.
freally-voice = { path = "../freally-voice", features = ["capture-cpal"] }
# Track B voice-following (FT-32/33/35): the recogniser (`freally-speech`, always
# present for its capability check) and the alignment layer (`freally-align`,
# pulled in only with the `vosk` feature, since it is used only by the follow
# loop). The Vosk engine links a native library, so it lives behind the
# off-by-default `vosk` feature — CI and the standard build need no libvosk.
freally-speech = { path = "../freally-speech" }
freally-align = { path = "../freally-align", optional = true }

[features]
# Turn on the Vosk-backed voice-following engine. OFF by default: enable it only
# where the native `libvosk` library and a model are present (a release build,
# FT-52). Without it the app builds cleanly and reports voice-following
# unavailable rather than failing.
vosk = ["freally-speech/vosk", "dep:freally-align"]

# The crash-notice helper waits for the crashed process to leave the process
# table before relaunching; the probe is the one thing with no portable std API.
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
